@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-07-17T01:50:13Z",
-  "count" : 119,
+  "timestamp" : "2025-07-30T01:53:31Z",
+  "count" : 55,
   "count_minmax" : [ 17, 119 ],
-  "count_decinc" : [ -0, +119 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "count_decinc" : [ -64, +119 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
