@@ -1,8 +1,8 @@
 {
   "timestamp" : "2025-07-30T01:53:31Z",
-  "count" : 117,
-  "count_minmax" : [ 10, 117 ],
-  "count_decinc" : [ -0, +117 ],
+  "count" : 15,
+  "count_minmax" : [ 15, 15 ],
+  "count_decinc" : [ -0, +15 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
