@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2025-07-29T02:03:20Z",
-  "count_outdated" : 262590,
-  "uniques_outdated" : 2713,
-  "count" : 264274,
-  "uniques" : 2741,
+  "timestamp" : "2025-07-30T01:53:31Z",
+  "count_outdated" : 262709,
+  "uniques_outdated" : 2714,
+  "count" : 264396,
+  "uniques" : 2743,
   "clones" : [
     {
-      "timestamp": "2025-07-15T00:00:00Z",
-      "count": 44,
-      "count_minmax": [ 15, 119 ],
-      "count_decinc": [ 75, 119 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2025-07-16T00:00:00Z",
-      "count": 119,
+      "count": 55,
       "count_minmax": [ 17, 119 ],
-      "count_decinc": [ 0, 119 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count_decinc": [ 64, 119 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-07-17T00:00:00Z",
@@ -133,9 +124,18 @@
     },
     {
       "timestamp": "2025-07-29T00:00:00Z",
-      "count": 10,
-      "count_minmax": [ 10, 10 ],
-      "count_decinc": [ 0, 10 ],
+      "count": 117,
+      "count_minmax": [ 10, 117 ],
+      "count_decinc": [ 0, 117 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-07-30T00:00:00Z",
+      "count": 15,
+      "count_minmax": [ 15, 15 ],
+      "count_decinc": [ 0, 15 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
